fix the dark mode fix not extending

--- a/static/martor/martor.css
+++ b/static/martor/martor.css
@@ -2,7 +2,7 @@
   color: black;
 }
 
-div#main > main#content-start > div#content {
+div#main > main#content-start.content {
   /* Admin site */
   background-color: var(--body-bg);
   color: var(--body-quiet-color);
